# tengine-lite-yolov5s-tt100k

./: CMakeLists.txt  README.md
include/: defines.h
src/: yolov5s-tt100k-cpu.cpp  yolov5s-tt100k-int8.cpp
tools/: data_preprocess.py  resize_pic.py  tt100k_fuxian.yaml
